Try to fix mobile alignment

--- a/static/css/styles-available_creations.css
+++ b/static/css/styles-available_creations.css
@@ -41,16 +41,19 @@ button {
 .column1 {
     flex: 30%;
     padding: 10px;
+    align-content: center;
 }
 
 .column2 {
     flex: 30%;
     padding: 10px;
+    align-content: center;
 }
 
 .column3 {
     flex: 30%;
     padding: 10px;
+    align-content: center;
 }
 
 #description_price {
